# taxsort-mcp

./: .env.example  .fastmcp.yaml  .gitignore  .horizon-trigger  CHANGELOG.md  README.md  config.py  fastmcp.json  pyproject.toml  server.json  server.py
.github/workflows/: ci.yml  deploy-frontend.yml
db/: neon.py  schema.sql
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/functions/: mcp.js
frontend/public/: llms.txt
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AccountsPage.tsx  AdvisorPage.tsx  ClassifyPage.tsx  DebugPanel.tsx  DonutChart.tsx  FeedbackPage.tsx  ImportPage.tsx  LockScreen.tsx  Nav.tsx  NostrProfilePanel.tsx  PrivacyPage.tsx  ProfilePage.tsx  ReasonText.tsx  SessionsPage.tsx  SettingsPage.tsx  SortableTable.tsx  SubscriptionsPage.tsx  SummaryPage.tsx  TaxResearcherPage.tsx  TransactionsPage.tsx  WalletPage.tsx
frontend/src/hooks/: useCategories.ts  useClassify.ts  useMCP.ts  useSubscriptions.ts
frontend/src/lib/: nostrProfile.ts
frontend/src/utils/: amountFilter.ts
tools/: accounts.py  advisors.py  categories.py  classify.py  feedback.py  imports.py  presence.py  rules.py  session_lock.py  sessions.py  share.py  subscriptions.py  transactions.py  usage.py  verification.py
